rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__arrays-2.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (arrays),\n\"a = [1, 2, 3];\").into_iter().map(| stmt | stmt.to_string()).collect :: < Vec\n< _ >> ().join(\"\\n\")"
snapshot_kind: text
---
a = (1, 2, 3)
