rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__arrays-3.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_ok(stringify! (arrays),\n\"a[0] = [1, 2, 4];\").into_iter().map(| stmt | stmt.to_string()).collect :: <\nVec < _ >> ().join(\"\\n\")"
snapshot_kind: text
---
a[0] = (1, 2, 4)
