rust/src/nasl/syntax/lexer/snapshots/scannerlib__nasl__syntax__lexer__tests__assign_return.snap
---
source: src/nasl/syntax/lexer/tests.rs
expression: "parse_ok(stringify! (assign_return), \"--a;\")"
snapshot_kind: text
---
[
    Statement {
        start: Token {
            kind: MinusMinus,
            position: (
                0,
                2,
            ),
        },
        end: Some(
            Token {
                kind: Semicolon,
                position: (
                    3,
                    4,
                ),
            },
        ),
        kind: Assign(
            MinusMinus,
            AssignReturn,
            Statement {
                start: Token {
                    kind: Ident(
                        Ident(
                            "a",
                        ),
                    ),
                    position: (
                        2,
                        3,
                    ),
                },
                end: Some(
                    Token {
                        kind: Ident(
                            Ident(
                                "a",
                            ),
                        ),
                        position: (
                            2,
                            3,
                        ),
                    },
                ),
                kind: Variable,
            },
            Statement {
                start: Token {
                    kind: X,
                    position: (
                        18446744073709551615,
                        18446744073709551615,
                    ),
                },
                end: None,
                kind: NoOp,
            },
        ),
    },
]
